--- a/app/src/main/res/layout/cardview_layout.xml
+++ b/app/src/main/res/layout/cardview_layout.xml
@@ -1,17 +1,42 @@
-<?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
+    android:id="@+id/cv"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:layout_gravity="center"
-    card_view:cardCornerRadius="4dp"
-    card_view:cardElevation="12dp">
+    android:layout_height="wrap_content"
+    card_view:cardBackgroundColor="@android:color/white"
+    card_view:cardElevation="2dp"
+    card_view:cardUseCompatPadding="true">
 
-    <TextView
-        android:id="@+id/info_text"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="@dimen/abc_text_size_large_material" />
+        android:padding="16dp">
+
+        <ImageView
+            android:id="@+id/device_photo"
+            android:layout_width="50sp"
+            android:layout_height="70sp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginRight="16dp"
+            android:src="@drawable/ic_stay_current_portrait_black_48dp"
+            android:layout_alignParentTop="true" />
+
+        <TextView
+            android:id="@+id/device_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/device_photo"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/device_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/device_name"
+            android:layout_toRightOf="@+id/device_photo" />
+
+
+    </RelativeLayout>
+
 </android.support.v7.widget.CardView>
