--- a/app/src/main/res/layout/nearby_fragment.xml
+++ b/app/src/main/res/layout/nearby_fragment.xml
@@ -27,5 +27,6 @@
         android:id="@+id/card_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" />
+        android:orientation="vertical"
+        android:paddingTop="@dimen/activity_vertical_margin" />
 </LinearLayout>
